--- a/templates/list_files.html
+++ b/templates/list_files.html
@@ -2,7 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <title>Google Picker Example</title>
+    <title>Select File</title>
+    
+    
+    <script language="JavaScript" type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script language="JavaScript" type="text/javascript" src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
+    <script language="JavaScript" type="text/javascript" src="{{ MEDIA_URL }}/static/js/jquery-ui-1.10.3.custom.js"></script>
+    
+    <link href="{{ MEDIA_URL }}/static/css/jquery-ui-1.10.3.custom.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ MEDIA_URL }}/static/css/style.css" />
 
     <script type="text/javascript">
 
@@ -44,8 +52,8 @@
             fileId = data.docs[0].id;
             document.location.href = '/showFile/'+fileId;
           }
-        var message = 'You picked id: ' + fileId;
-        document.getElementById('result').innerHTML = message;
+        //var message = 'You picked id: ' + fileId;
+        //document.getElementById('result').innerHTML = message;
       }
     </script>
   </head>
