fixing picker issue

--- a/templates/list_files.html
+++ b/templates/list_files.html
@@ -31,7 +31,8 @@
             setCallback(pickerCallback).
             build();
         */
-        
+        var origin = window.location.protocol + '//' + window.location.host;
+        console.log(origin);
         var viewDocs = new google.picker.View(google.picker.ViewId.DOCUMENTS);
         var viewPDFs = new google.picker.View(google.picker.ViewId.PDFS);
         var picker = new google.picker.PickerBuilder()
@@ -40,6 +41,7 @@
             .addView(new google.picker.DocsUploadView())
             .setDeveloperKey(developerKey)
             .setCallback(pickerCallback)
+            .setOrigin(origin)
             .build();
         
         picker.setVisible(true);
@@ -58,7 +60,6 @@
     </script>
   </head>
   <body>
-    <div id="result"></div>
 
     <!-- The Google API Loader script. -->
     <script type="text/javascript" src="https://apis.google.com/js/api.js?onload=loadPicker"></script>
