--- a/templates/show_file.html
+++ b/templates/show_file.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-<div id="menu" class="img-right-rounded shadow"><img src="{{ MEDIA_URL }}/static/images/menu.png" width="30" height="30" alt="Menu"/></div>
+<div id="app-bar-content"><img src="{{ MEDIA_URL }}/static/images/menu.png" width="30" height="30" alt="Menu"/></div>
 <div id="questionMenu" class="img-right-rounded shadow">
     <div class="menuItem newline" style="margin-left: 21%;" >Question Number</div>
     <input id="questionNumber" class="menuInputs img-rounded menuItem newline" style="margin-left: 37%;" type="number" min="1" step="1" pattern="\d+"/>
