--- a/templates/show_file.html
+++ b/templates/show_file.html
@@ -21,6 +21,9 @@
 </head>
 
 <body>
+<section id="page-holder">
+<section id="sidebar-content">test</section>
+<section id="wrapper-holder">
 <div id="app-bar-content"><img src="{{ MEDIA_URL }}/static/images/menu.png" width="30" height="30" alt="Menu"/></div>
 <div id="questionMenu" class="img-right-rounded shadow">
     <div class="menuItem newline" style="margin-left: 21%;" >Question Number</div>
@@ -169,6 +172,8 @@
     </form>
     
     
+</section>
+</section>
 </section>
        
 {% include "includes/showfile_script.html" %}
