--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,31 +26,31 @@ z-index: 2000;
     /* default fallback */
     background: rgb(0, 0, 0) transparent;
     /* nice browsers */
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.6);
     /* IE 6/7 */
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#CCFFFFFF, endColorstr=#CCFFFFFF);
     /* IE8 */    
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#CCFFFFFF, endColorstr=#CCFFFFFF)";
 }
 
-#page-holder{
-    border: solid 1px #fff;
-    margin: 0 auto;
-    width: 100%;
-}
+#app-bar-content img{cursor: pointer;}
+
+#barLogo{float:left;margin:4px;margin-left: 41%;margin-right: 0px;}
+#downLogo{float:left;margin:8px;margin-left: 0px;}
+#menuLogo{float:right;margin:8px;margin-right: 5px;}
+
 
 #wrapper-holder{
-    float:right;
-    display: inline-block;
+    float:left;
     position: relative;
-    border: solid 1px green;
     margin: 0 auto;
     width: 100%;
-    padding-right: 270px;
 }
 
 #sidebar-content{
-    background-color: red;
+    background-color: black;
+    
+color: #fff;
 position: fixed !important;
 top: 0;
 right: 0;
@@ -65,6 +65,7 @@ width: 270px;
     min-width: 500px;
     position:relative;
     margin-top:55px;
+    margin-bottom:100px;
 }
 #wrapper img{
     width:100%;
@@ -75,7 +76,6 @@ width: 270px;
 	    box-shadow: 2px 0px 22px #000000;
 }
 #wrapper input{
-    border:1px solid blue;
     text-align:center;
     padding:0;
     color: #000;
