--- a/static/css/style.css
+++ b/static/css/style.css
@@ -314,6 +314,7 @@ border-bottom-right-radius: 6px;
 
 .newline{clear: both;}
 
+/*
 .picker-dialog{
 -webkit-border-radius: 20px;
 -moz-border-radius: 20px;
